fix(ui-docs): layout breaks in firefox

--- a/projects/ui-docs/src/app/layout/layout/layout.component.scss
+++ b/projects/ui-docs/src/app/layout/layout/layout.component.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 ui-scroll {
